err/yorbay.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/yorbay'...
Compiling './lib/python3.5/site-packages/yorbay/compiler.py'...
***   File "./lib/python3.5/site-packages/yorbay/compiler.py", line 463
    raise ErrorWithSource(e.cause, self._source), None, sys.exc_info()[2]
                                                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/yorbay/debug'...
Compiling './lib/python3.5/site-packages/yorbay/debug/compiler.py'...
***   File "./lib/python3.5/site-packages/yorbay/debug/compiler.py", line 170
    raise exc_type, exc_val, exc_tb
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/yorbay-0.1.dev1.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
